Selection in Mask mode in Clip Editor does not work correctly #65032

Closed
opened 2019-05-23 12:55:26 +02:00 by Sebastian Koenig · 7 comments

System Information
Operating system: Linux-4.4.0-146-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.80 (sub 71), branch: master (modified), commit date: 2019-05-23 08:02, hash: 8389cc7e67
Worked: 2.79

Short description of error
I am currently working on improving the keymap for masking in 2.80, and found that selection doesnt seem to work correctly, in a way which I don't know how to fix myself.
The mapping mask.select is set to select_mouse, so it should work with LMB select in factory settings. However, mask points are not selected when left clicking on them, but marker points are, even though they should only be selected with ctrl+LMB, according to the keymap.
Also, the operator mask.select has the "Deselect on Nothing" active, however, this also does not work.

Exact steps for others to reproduce the error
Open the attached file and try to select one of the mask points with LMB.

  • Does not work, however, if you try to select a marker with LMB, it is selected.masking_keymap.blend

**System Information** Operating system: Linux-4.4.0-146-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.80 (sub 71), branch: master (modified), commit date: 2019-05-23 08:02, hash: `8389cc7e67` Worked: 2.79 **Short description of error** I am currently working on improving the keymap for masking in 2.80, and found that selection doesnt seem to work correctly, in a way which I don't know how to fix myself. The mapping `mask.select` is set to select_mouse, so it *should* work with LMB select in factory settings. However, mask points are not selected when left clicking on them, but marker points are, even though they should only be selected with ctrl+LMB, according to the keymap. Also, the operator `mask.select` has the "Deselect on Nothing" active, however, this also does not work. **Exact steps for others to reproduce the error** Open the attached file and try to select one of the mask points with LMB. - > Does not work, however, if you try to select a marker with LMB, it is selected.[masking_keymap.blend](https://archive.blender.org/developer/F7063130/masking_keymap.blend)
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Sergey Sharybin was assigned by Sebastian Koenig 2019-05-23 12:55:44 +02:00
Sergey Sharybin removed their assignment 2019-05-23 15:46:57 +02:00
Brecht Van Lommel was assigned by Sergey Sharybin 2019-05-23 15:46:57 +02:00

Added subscribers: @brecht, @Sergey

Added subscribers: @brecht, @Sergey

@brecht, think i'll bounce this one to you.

Here comes the developer note.

My guess is that in factory startup the order of keymaps is different, which makes Clip Editor keymap to run prior to the masking one. This makes it so LMB invokes mouse_select() from tracking_select.c, which always returns OPERATOR_FINISHED. This makes it so the mask editing keymaps never run.

Maybe we can prioritize making keymap somehow?
Or maybe should make it so selection returns OPERATOR_PASS_THROUGH instead? It makes things work with a simple one-line change, but it will have consequences.

The "Deselect on Nothing" is caused by mask editing keymap not running at all.

@brecht, think i'll bounce this one to you. Here comes the developer note. My guess is that in factory startup the order of keymaps is different, which makes Clip Editor keymap to run prior to the masking one. This makes it so LMB invokes `mouse_select()` from `tracking_select.c`, which always returns `OPERATOR_FINISHED`. This makes it so the mask editing keymaps never run. Maybe we can prioritize making keymap somehow? Or maybe should make it so selection returns `OPERATOR_PASS_THROUGH` instead? It makes things work with a simple one-line change, but it will have consequences. The "Deselect on Nothing" is caused by mask editing keymap not running at all.
Author
Member

Any news on this? I would like to improve the masking keymap. Even though UI is frozen, but currently it is simply not functional.

Any news on this? I would like to improve the masking keymap. Even though UI is frozen, but currently it is simply not functional.

This issue was referenced by 5916b09670

This issue was referenced by 5916b09670b861117b9c87778c0ddc8bcf0a2c35

The order of keymaps is defined by the editor. clip_main_region_init has the Mask Editing keymap before Clip Editor, and checking the output of --debug-handlers it is handling them in that order.

There are two issue here:

  • Select for the mask editing happens on CLICK (mouse button release) and for the clip editing happens on PRESS. This means the clip operator runs before the mask operator.
  • If we fix this, click in empty space to deselect all for the mask will break the clip editor selection.
The order of keymaps is defined by the editor. `clip_main_region_init` has the Mask Editing keymap before Clip Editor, and checking the output of `--debug-handlers` it is handling them in that order. There are two issue here: * Select for the mask editing happens on CLICK (mouse button release) and for the clip editing happens on PRESS. This means the clip operator runs before the mask operator. * If we fix this, click in empty space to deselect all for the mask will break the clip editor selection.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65032
No description provided.