Fix T65032: selection conflicts between motion tracks and masks in clip editor