source/blender/editors/mask/mask_select.c
@@ -36,6 +36,7 @@
 #include "WM_api.h"
 #include "WM_types.h"
 
+#include "ED_clip.h"
 #include "ED_screen.h"
 #include "ED_select_utils.h"
 #include "ED_mask.h" /* own include */
@@ -211,6 +212,17 @@ void ED_mask_select_flush_all(Mask *mask)
   }
 }
 
+void ED_mask_deselect_all(const bContext *C)
+{
+  Mask *mask = CTX_data_edit_mask(C);
+  if (mask) {
+    ED_mask_select_toggle_all(mask, SEL_DESELECT);
+    ED_mask_select_flush_all(mask);
+    DEG_id_tag_update(&mask->id, ID_RECALC_SELECT);
+    WM_event_add_notifier(C, NC_MASK | ND_SELECT, mask);
+  }
+}
+
 /** \} */
 
 /* -------------------------------------------------------------------- */
@@ -375,14 +387,11 @@ static int select_exec(bContext *C, wmOperator *op)
       return OPERATOR_FINISHED;
     }
     else if (deselect_all) {
-      ED_mask_select_toggle_all(mask, SEL_DESELECT);
-
-      ED_mask_select_flush_all(mask);
-
-      DEG_id_tag_update(&mask->id, ID_RECALC_SELECT);
-      WM_event_add_notifier(C, NC_MASK | ND_SELECT, mask);
-
-      return OPERATOR_FINISHED;
+      /* For clip editor tracks, leave deselect all to clip editor. */
+      if (!ED_clip_can_select(C)) {
+        ED_mask_deselect_all(C);
+        return OPERATOR_FINISHED;
+      }
     }
   }
 
